Fixed visual bugs on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,12 @@ ul {
     @media(max-width: 992px){
         padding: 40px;
     }
+    @media(max-width: 992px){
+        padding: 25px;
+    }
+    @media(max-width: 768px){
+        padding: 25px 15px 10px !important;
+    }
 }
 .header-list{
     @media(max-width: 992px){
@@ -414,8 +420,11 @@ ul {
         max-width: none;
     }
     @media(max-width: 768px){
-        padding: 15px;
+        padding: 40px 15px;
         max-width: none;
+    }
+    @media(max-width:580px){
+        padding: 30px 15px;
     }
 }
 .title-container{
@@ -471,6 +480,10 @@ ul {
         font-size: 19px;
         line-height: 1.5;   
     }
+    @media(max-width: 580px){
+        font-size: 16px;
+        line-height: 1.3;   
+    }
 }
 
 .main-btn {
@@ -481,7 +494,6 @@ ul {
     font-size: 20px;
     font-weight: 600;
     border-radius: 100px;
-
     background-color: #469DDD;
     box-shadow: 0 4px 10px #469DDD;
     color: #fff;
@@ -489,6 +501,10 @@ ul {
     text-decoration: none;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out, border-color 0.3s ease-in-out;
     transition: 0.3s all;
+    @media(max-width: 580px){
+        padding: 15px;
+        font-size: 18px;
+    }
 }
 .main-btn:hover {
     transition: 0.3s all;
@@ -518,8 +534,10 @@ ul {
     text-decoration: none;
     transition: 0.3s all;
     @media(max-width: 992px){
-        display: none !important;
+        display: none;
     }
+  
+  
 }
 
 .header-phone:hover {
@@ -554,6 +572,9 @@ ul {
     margin: 50px auto;
     display: flex;
     justify-content: center;
+    @media(max-width: 768px){
+        margin: 35px 0;
+    }
   
 }
 .services {
@@ -588,6 +609,7 @@ ul {
     border-style: solid;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out, border-color 0.3s ease-in-out;
     text-decoration: none;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     @media(max-width: 992px){
         font-size: 25px;
@@ -624,6 +646,9 @@ ul {
 .job{
     padding: 50px 0;
     background-color: #fff;
+    @media(max-width: 768px){
+        padding: 35px 0;
+    }
   }
   .job-title{
     display: flex;
@@ -687,6 +712,9 @@ ul {
         flex: 100%;
         max-width:100%;
     }
+    @media(max-width:420px){
+        max-width: 100% !important;
+    }
   }
   .job-card:hover {
     transform: scale(1.05); 
@@ -727,8 +755,8 @@ ul {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      width: 50px !important;
-      height: 50px !important;
+      width: 40px !important;
+      height: 40px !important;
       background: #469DDD;
       border: none;
       border-radius: 50%;
@@ -745,17 +773,17 @@ ul {
   }
   
   .button-prev {
-      left: 15px;
+      left: 0;
   }
   
   .button-next {
-      right: 15px;
+      right: 0;
   }
   
   .button-prev svg,
   .button-next svg {
-      width: 30px !important;
-      height: 30px !important;
+      width: 35px !important;
+      height: 35px !important;
   }
   .swiper-button-prev:after{
     @media(max-width: 768px){
@@ -778,6 +806,9 @@ ul {
 /* Contacts Block */
 .contacts{
     margin: 50px 0;
+    @media(max-width: 768px){
+        margin: 35px 0;
+    }
 }
 .contacts-box {
     position: relative;
@@ -852,6 +883,10 @@ ul {
     }
     @media(max-width: 768px){
         font-size: 15px;
+    }
+    @media(max-width: 480px){
+        font-size: 14px;
+        padding: 15px;
     }
 }
 .contacts-socials {
@@ -1031,6 +1066,9 @@ ul {
 /* Reviews Section */
 .reviews {
     padding: 50px 0;
+    @media(max-width: 768px){
+        padding: 35px 0;
+    }
 }
 
 .reviews-heading {
@@ -1210,6 +1248,9 @@ ul {
 .faq-section{
     margin: 50px 0;
     position: relative;
+    @media(max-width: 768px){
+        margin: 35px 0;
+    }
 }
 .faq-heading{
     margin-bottom: 40px;
@@ -1246,6 +1287,9 @@ ul {
     @media(max-width: 580px){
         font-size: 18px;
     }
+    @media(max-width: 480px){
+        font-size: 16px;
+    }
 }
 
 .accordion__answer p {
@@ -1256,6 +1300,10 @@ ul {
     padding-left: 70px;
     @media(max-width:  580px){
         padding-left: 43px;
+    }
+    @media(max-width:  480px){
+        margin: 0;
+        font-size: 14px;
     }
 }
 
